--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,11 @@
 # Site settings
-title: Zetsu
-email: zetsu@domain.com
-description: Um lindo tema feito para jekyll e com o <3
+title: MOSC Blog
+email: mosc@lists.berkeley.edu
+description:
 baseurl: "//moscblog.nicholas-fong.com"
-url: "http://nandomoreira.me"
+url: "//moscblog.nicholas-fong.com"
 
-author:
-  name     : 'Fernando Moreira'
-  email    : hi@nandomoreira.me
-  url      : http://nandomoreira.me
-  facebook : http://facebook.com/fernando.dev
-  twitter  : http://twitter.com/nandomoreirame
-
-github: https://github.com/nandomoreirame/zetsu
-disqus_shortname: "fernandomoreira"
-google_analytics: UA-52446115-1
+github: https://github.com/
 
 paginate: 2
 comments: true
